<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profilefragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/click_imagebg"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="-10dp"
        app:cornerRadius="0.0dp"
        />
    <ImageView
        android:id="@+id/click_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/ic_person_foreground"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="40dp"
        app:cornerRadius="0.0dp"
        />

    <Button
        android:id="@+id/camera_change"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:text="@string/stimg"
        android:textColor="@color/white"
        android:layout_marginTop="195dp"
        android:layout_marginStart="140dp"
        android:textSize="14.28sp"
        app:cornerRadius="6dp"
        android:clickable="false"
        android:backgroundTint="@color/icon"/>

    <Button
        android:id="@+id/backimg"
        android:layout_marginRight="20dp"
        android:layout_width="370dp"
        android:layout_height="380dp"
        app:cornerRadius="10dp"
        android:layout_marginTop="270dp"
        android:backgroundTint="@color/white"
        android:clickable="false"

        android:alpha="0.6"
        />
    <TextView
        android:id="@+id/agetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginStart="40dp"
        android:layout_marginTop="290dp"
        />
    <TextView
        android:id="@+id/agenum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_21"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="290dp"
        android:layout_marginStart="140dp"
        />
    <ImageView
        android:id="@+id/line1"
        android:layout_width="310dp"
        android:layout_height="15dp"
        android:layout_marginTop="325dp"
        android:layout_marginStart="40dp"
        />
    <TextView
        android:id="@+id/gendertitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginStart="40dp"
        android:layout_marginTop="340dp"
        />
    <TextView
        android:id="@+id/gendertype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginStart="140dp"
        android:layout_marginTop="340dp"
        />
    <ImageView
        android:id="@+id/line2"
        android:layout_width="310dp"
        android:layout_height="15dp"
        android:layout_marginTop="375dp"
        android:layout_marginStart="40dp"
        />
    <TextView
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/dobtxt"
        android:textColor="@color/black"
        android:layout_marginStart="40dp"
        android:layout_marginTop="390dp"
        />
    <TextView
        android:id="@+id/dobdata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/dobdatas"
        android:textColor="@color/black"
        android:layout_marginStart="190dp"
        android:layout_marginTop="390dp"
        />
    <TextView
        android:id="@+id/currentactivtype"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/ativittype"
        android:textColor="@color/black"
        android:layout_marginStart="40dp"
        android:layout_marginTop="442dp"
        />
    <ImageView
        android:id="@+id/line3"
        android:layout_width="310dp"
        android:layout_height="15dp"
        android:layout_marginTop="428dp"
        android:layout_marginStart="40dp"
        />
    <ImageView
        android:id="@+id/line4"
        android:layout_width="310dp"
        android:layout_height="15dp"
        android:layout_marginTop="500dp"
        android:layout_marginStart="40dp"
        />
    <TextView
        android:id="@+id/emaillbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/eml"
        android:textColor="@color/black"
        android:layout_marginStart="40dp"
        android:layout_marginTop="515dp"
        />
    <TextView
        android:id="@+id/emaildata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/emldata"
        android:textColor="@color/black"
        android:layout_marginStart="40dp"
        android:layout_marginTop="542dp"
        />
    <ImageView
        android:id="@+id/line5"
        android:layout_width="310dp"
        android:layout_height="15dp"
        android:layout_marginTop="580dp"
        android:layout_marginStart="40dp"
        />
</FrameLayout>